--- a/public/index.html
+++ b/public/index.html
@@ -34,17 +34,8 @@
                 <img src="https://dummyimage.com/150x150/000/fff" alt="">
             </div>
             <div class="col s7">
-                <div class="col s5">
-                    <ul>
-                        <li>Habitad</li>
-                        <li>Habilidades</li>
-                    </ul>
-                </div>
-                <div class="col s5">
-                    <ul>
-                        <li>Habitad</li>
-                        <li>Habilidades</li>
-                    </ul>
+                <div id="caracteristicas" class="col s5">
+                   
                 </div>
             </div>
         </div>
